⚡️ [FEAT] 캐시 추가 및 userId url에서 삭제